マイページ画面リンク

--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -1,5 +1,5 @@
 .header
-  = render "flash"
+  -# = render "flash"
   .header__box
     .header__box__upper-box
       .header__box__upper-box__logo
@@ -25,7 +25,7 @@
             ブランドから探す
       %ul.header__box__lower-box__right-box
         - if user_signed_in?
-          =link_to current_user.nickname, root_path
+          =link_to current_user.nickname, mypage_mypages_path
           %li
             = link_to 'Facebookでログイン', user_facebook_omniauth_authorize_path, method: :post
 
