--- a/app/views/mypages/_sidebar.html.haml
+++ b/app/views/mypages/_sidebar.html.haml
@@ -25,7 +25,7 @@
       設定
       .sidebar_contents2-1
         =form_with do |f|
-          =f.button "プロフィール", class: "sidebar_btn", onclick: "location.href=''"
+          =f.button "プロフィール", class: "sidebar_btn", onclick: "location.href='mypage_path'"
           .sidebar_contents2-2
           =f.button "発送先・お届け先 住所変更", class: "sidebar_btn", onclick: "location.href=''"
           .sidebar_contents2-3
