--- a/app/assets/stylesheets/_new5.scss
+++ b/app/assets/stylesheets/_new5.scss
@@ -74,6 +74,8 @@
       }
       &-form {
         font-size: 14px;
+        padding-top: 30px;
+        padding-left: 110px;
         &-a {
           font-size: 16px;
           // padding: 10px 16px 8px;
