サイドバーの修正

--- a/app/assets/stylesheets/_mypage_edit.scss
+++ b/app/assets/stylesheets/_mypage_edit.scss
@@ -6,7 +6,7 @@
   .all1 {
     display: flex;
     margin: 0px 210px 0;
-
+    height: 1000px;
     .mypage {
       background-color: rgb(245, 245, 245);
       margin-top: 20px;
