--- a/app/views/mypages/mypage.html.haml
+++ b/app/views/mypages/mypage.html.haml
@@ -23,7 +23,7 @@
           .mypage__menu-area-logo
             = link_to image_tag(src="logo_red.svg"),root_path
         .mypage__menu-text
-          あああああああああ
+          こんにちは
         .mypage__menu-time
           1日前
       .mypage__menu
@@ -31,7 +31,7 @@
           .mypage__menu-area-logo
             = link_to image_tag(src="logo_red.svg"),root_path
         .mypage__menu-text
-          あああああああああ
+          こんにちは
         .mypage__menu-time
           1日前
       .mypage__menu
@@ -39,7 +39,7 @@
           .mypage__menu-area-logo
             = link_to image_tag(src="logo_red.svg"),root_path
         .mypage__menu-text
-          あああああああああ
+          こんにちは
         .mypage__menu-time
           1日前
       .mypage__list2
