--- a/app/views/mypages/show.html.haml
+++ b/app/views/mypages/show.html.haml
@@ -1,4 +1,4 @@
--# = render "header"
+= render "items/header"
 .all
   .all1
     = render "sidebar"
@@ -18,4 +18,4 @@
                   = f.text_area :text, class: "mypage__form__area__text", placeholder: "例)こんにちは☆ご覧いたたぎありがとうございます！かわいいものやきれいめオフィスカジュアル中心に出品しています。服のサイズは主に9号です。気持ちよくお取引できるよう心がけていますので、商品や発送方法などご質問がありましたらお気軽にどうぞ♪"
                   = f.submit "変更する", class: "mypage__form__area__button"
 
--# = render "footer"
+= render "items/footer"
