--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -196,7 +196,11 @@
         出品
       .main__Exhibition-image-logo
         -if user_signed_in?
+          -# =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_item_path,data: {"turbolinks" => false}
           =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_item_path,data: {"turbolinks" => false}
+        - else
+          -# =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_signup_path
+          =link_to icon('fas', 'camera', class: "main__Exhibition-image-logo-camera"),new_signup_path
 
 = render "footer"
 
