--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -25,7 +25,7 @@
             ブランドから探す
       %ul.header__box__lower-box__right-box
         - if user_signed_in?
-          = link_to current_user.nickname, root_path
+          = link_to current_user.nickname, mypage_mypages_path
 
           %li
             = link_to "ログアウト", destroy_user_session_path, method: :delete, class:"header__box__lower-box__right-box__btn__logout"
