--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -35,7 +35,7 @@
           = link_to "もっと見る >",root_path
       .main__categories-box-area
         - @item.each do |item|
-          =link_to "/items/#{item.id}", method: :get do
+          =link_to "/items/#{item.id}" do
             .main__categories-box-area-image
               .main__categories-box-area-image-area
                 .main__categories-box-area-image-area-image
