--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -33,7 +33,7 @@
         .show__product-box-area2-exhibition2
           .show__product-box-area2-exhibition2-box1
             .show__product-box-area2-exhibition2-box1-name
-              = link_to @item.user.nickname, root_path
+              = @item.user.nickname
             .show__product-box-area2-exhibition2-box1-name1 
               .show__product-box-area2-exhibition2-box1-name1-smile1
                 =icon('fas', 'grin', class: "show__product-box-area2-exhibition2-box1-name1-smile1-1")
