--- a/app/views/mypages/mypage.html.haml
+++ b/app/views/mypages/mypage.html.haml
@@ -9,6 +9,7 @@
           = image_tag(src="neko.jpg", class: "image2")
         .mypage__box-name
           名前
+          =@user.nickname
         .mypage__box-evaluation
           評価 0  
         .mypage__box-exhibition
